--- a/style.css
+++ b/style.css
@@ -7,8 +7,17 @@ body {
     width: 100%;
     margin: 0;
     overflow: hidden;    
-    background: #333;
-    
+    background: url(/img/typer.jpg) #333;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center; 
+    content: '';
+    display: block;    
+}
+
+.content {
+    margin-top: 20%;
+    margin-left: 5%;
 }
 
 a {
@@ -17,59 +26,6 @@ a {
 
 #arrow-btn {
     padding-left: 0.5rem;
-}
-
-.showcase::after {
-    content: '';
-    height: 100vh;
-    width: 100%;
-    background-image: url(/img/typer.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    display: block;
-    filter: blur(10px);
-    -webkit-filter: blur(10px);
-    transition: all 1000ms; 
-}
-
-.showcase:hover::after {
-    filter: blur(0px);
-    -webkit-filter: blur(0px);
-}
-
-.showcase:hover .content #Blur{ 
-    filter: blur(0px);
-    -webkit-filter: blur(0px);
-}
-
-.content {
-    
-    position: absolute;
-    z-index: 1;
-    top: 10%;
-    left: 10%;
-    margin-top: 15rem;
-    margin-left: 0rem;
-    width: 100%;
-    text-align: left;
-    transition: all 1000ms;
-    filter: blur(0px);
-    -webkit-filter: blur(0px);    
-}
-
-#Blur {
-    position: absolute;
-    z-index: 1;
-    top: 10%;
-    left: 10%;
-    margin-top: 15rem;
-    margin-left: 0rem;
-    width: 100%;
-    text-align: left;
-    transition: all 1000ms;
-    filter: blur(5px);
-    -webkit-filter: blur(5px);    
 }
 
 h1, h2 {
@@ -96,7 +52,9 @@ h2 {
         font-size: 5rem;
         overflow: hidden;
         max-height: 100%
+        
     }
+     
 }
 
 @media(max-width: 800px) {
