--- a/style.css
+++ b/style.css
@@ -8,10 +8,9 @@ body {
     margin: 0;
     overflow: hidden;    
     background: url(/img/typer.jpg) #333;
-    background-size: cover;
     background-repeat: no-repeat;
+    background-size: cover;    
     background-position: center; 
-    content: '';
     display: block;    
 }
 
@@ -42,6 +41,12 @@ h2 {
     color: #aaa;
 }
 
+footer {
+    margin-top: 10rem;
+    text-align: center;
+}
+
+
 /* Cursor */
 .txt-type .txt {
     border-right: 0.2rem solid #777
@@ -59,6 +64,7 @@ h2 {
 
 @media(max-width: 800px) {
     .content {
+        margin-top: 20%;
         padding: 0.1rem;
         height: 100vh;
     }
@@ -69,6 +75,7 @@ h2 {
 
 @media(max-width: 500px) {
     h1 {
+        margin-top: 20%;
         font-size: 2.3rem;
         margin-left: -1rem;        
     }
