--- a/style.css
+++ b/style.css
@@ -1,45 +1,57 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway|Thasadith');
 
-body {
+html {
+    background: url(/img/typer.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+html, body {
     font-family: 'Raleway', sans-serif;
-    height: 100vh;    
+    height: 100%;    
     color: #ccc;
     width: 100%;
     margin: 0;
-    overflow: hidden;    
-    background: url(/img/typer.jpg) #333;
-    background-repeat: no-repeat;
-    background-size: cover;    
-    background-position: center; 
+    padding: 0;
+    overflow: hidden;     
     display: block;    
 }
-
-.content {
-    margin: 20% 5% 92% 5%; 
+#container {
+    min-height: 100%;
+    position: relative;
+}
+#header {
+    margin-top: 10%;
+    margin-left: 10%;
+    padding:0.5rem;
+    padding-bottom: 3.5rem; /* Height of the footer */
 }
 
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 3.5rem;   /* Height of the footer */
+}
 a {
     color: #aaa
 }
-
-#arrow-btn {
-    padding-left: 0.5rem;
+#btn-btn {
+    padding-left: 0.5rem;    
 }
-
 h1, h2 {
     font-weight: 200;
     margin: 0.4rem;
 }
-
 h1 {
     font-size: 3.5rem;
 }
-
 h2 {
     font-size: 2rem;
     color: #aaa;
 }
-
 footer {
     text-align: center;
 }
@@ -47,21 +59,18 @@ footer {
 .txt-type .txt {
     border-right: 0.2rem solid #777
 }
-
 @media(min-width: 1200px) {
     h1 {
         font-size: 5rem;             
     }
      
 }
-
 @media(max-width: 800px) {
     h1 {
         font-size: 3rem;
     }
          
 }
-
 @media(max-width: 500px) {
     h1 {
         margin-top: 20%;
@@ -74,10 +83,9 @@ footer {
     }
 }
 /* Landscape */
-
 @media (max-height: 500px) {
     .content .title,
     .content .text {
         display: none;     
-    }    
+    }
 }
