--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ html, body {
 
 #footer {
     position: absolute;
-    bottom: 0;
+    bottom: 0.9rem;
     width: 100%;
     height: 3.5rem;   /* Height of the footer */
 }
