--- a/style.css
+++ b/style.css
@@ -29,9 +29,11 @@ html, body {
     padding-bottom: 3.5rem; /* Height of the footer */
 }
 
-#footer {
+footer {
+    font-size: 1.5rem;
+    text-align: center;
     position: absolute;
-    bottom: 0.9rem;
+    bottom: 2.5rem;
     width: 100%;
     height: 3.5rem;   /* Height of the footer */
 }
@@ -52,9 +54,6 @@ h2 {
     font-size: 2rem;
     color: #aaa;
 }
-footer {
-    text-align: center;
-}
 /* Cursor */
 .txt-type .txt {
     border-right: 0.2rem solid #777
@@ -63,11 +62,13 @@ footer {
     h1 {
         font-size: 5rem;             
     }
-     
 }
 @media(max-width: 800px) {
     h1 {
         font-size: 3rem;
+    }    
+    footer {
+        font-size: 1rem;
     }
          
 }
