--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway|Thasadith');
 
+html {
+    background: url(/img/typer.jpg) no-repeat center center fixed;
+}
+body {
+    background: url(/img/typer.jpg) no-repeat center center fixed;
+}
 html, body {
-    background: url(/img/typer.jpg) no-repeat center center fixed !important;
+    background: url(/img/typer.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
