--- a/css/style.css
+++ b/css/style.css
@@ -7,23 +7,29 @@ html, body {
     -o-background-size: cover;
     background-size: cover;
     font-family: 'Raleway', sans-serif;
-    height: 100%;
+    height: 100vh;
     color: #ccc;
     width: 100%;
     margin: 0;
+    margin-left: 0;
     padding: 0;
     overflow: hidden;
     display: block;
 }
 
+h1, h2 {
+    font-weight: 200;
+}
+h1 {
+    font-size: 3.5rem;
+}
+h2 {
+    font-size: 2rem;
+    color: #aaa;
+}
 .container {
     min-height: 100%;
     position: relative;
-}
-#header {
-    margin-top: 10%;
-    margin-left: 10%;
-    padding:0.5rem;    
 }
 .footer {
     background-color: #222;
@@ -46,24 +52,13 @@ a:hover {
 #btn-btn {
     padding-left: 0.5rem;
 }
-h1, h2 {
-    font-weight: 200;
-    margin: 0.4rem;    
-}
-h1 {
-    font-size: 3.5rem;
-}
-h2 {
-    font-size: 2rem;
-    color: #aaa;
-}
 /* Cursor */
 .txt-type .txt {
     border-right: 0.2rem solid #777
 }
 @media(min-width: 1200px) {
     h1 {
-        font-size: 5rem;
+        font-size: 5rem;        
     }
 }
 @media(max-width: 800px) {
@@ -78,11 +73,9 @@ h2 {
     h1 {
         margin-top: 20%;
         font-size: 2.3rem;
-        margin-left: -1rem;
     }
     h2 {
         font-size: 1.3rem;
-        margin-left: -1rem;
     }
 }
 /* Landscape */
