--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@ html, body {
     overflow: hidden;
     display: block;
 }
+.container.header {
+    margin-left: 2rem;    
+}
 
 h1, h2 {
     font-weight: 200;
@@ -37,9 +40,8 @@ h2 {
     text-align: center;
     position: absolute;
     bottom: 0rem;
-    width: 100%;    
+    width: 100%;  
 }
-
 a:link {
     color: #aaa;
 }
