--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html, body {
     display: block;
 }
 .container.header {
-    margin-left: 2rem;    
+    margin-left: 1rem;
 }
 
 h1, h2 {
@@ -33,6 +33,7 @@ h2 {
 .container {
     min-height: 100%;
     position: relative;
+    width: 100%;
 }
 .footer {
     background-color: #222;
