--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,8 @@ a:hover {
 .txt-type .txt {
     border-right: 0.2rem solid #777
 }
-
-@media(min-width: 1200px) {
+/* Media */
+@media(min-width: 1100px) {
     h1 {
         font-size: 5rem;        
     }
